ensure the info box is always visible

--- a/src/styles.styl
+++ b/src/styles.styl
@@ -6,6 +6,7 @@ body
 #hover-info
   position absolute
   pointer-events: none
+  z-index: 2
 p.one-high
   display: block; overflow: hidden;
   height: 1em; line-height: 1em;
@@ -53,7 +54,6 @@ li.selected[data-link-course-id] {
   padding 20px
   width 400px
   background white
-  opacity .7
   -webkit-transform: translate(0px, 0px)
   transform: translate(0px, 0px)
   box-shadow 2px 2px 4px rgba(0,0,0,.2)
